# servitor

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  controllers.rs  errors.rs  main.rs  models.rs  service.rs  state.rs  systemd.rs  unit.rs
src/controllers/: health.rs  services.rs
src/middleware/: auth.rs
src/models/: health.rs  services.rs
src/systemd/: manager.rs  unit.rs
