[package]
name = "servitor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0" , features = ["rt-multi-thread", "parking_lot"]}
zbus = { version = "5.3.1", default-features = false, features = ["tokio"]}
chrono = { version = "0.4.39" , default-features = false, features = ["alloc"]}
thiserror = "2.0.11"
