[package]
name = "servitor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"]}
axum-extra = { version = "0.10.0", default-features = false, features = ["typed-header"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0" , features = ["rt-multi-thread", "parking_lot"]}
zbus = { version = "5.3.1", default-features = false, features = ["tokio"]}
chrono = { version = "0.4.39" , default-features = false, features = ["serde"]}
thiserror = "2.0.11"
anyhow = "1.0.95"
password-hash = "0.5.0"
pbkdf2 = { version = "0.12.2", features = ["simple"]}
scrypt = "0.11.0"
argon2 = "0.5.3"
